#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([progam_options], [2.0], [patjnichols@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([putils.cpp])
AC_CONFIG_HEADERS([config.h])
LT_INIT
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([setenv strdup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
